# AdventOfCode

./: .gitignore  README.md
2022/day1/: .gitignore
2023/: README.md
2023/Day01/: day1_taks2.py  log1.txt
2023/Day06/: Cargo.toml
2023/Day1/: day1.py  log.txt
2023/Day2/: day2_task1.py  day2_task2.py
2023/Day4/: Cargo.toml
2023/day08/: test.txt
2023/day10/: Cargo.toml  output.txt
2023/day12/: README.md  output.txt  task2.py
2023/day13/: example.txt
2023/day14/: Cargo.toml  example2.txt
2023/day17/: README.md
2023/day18/: Cargo.toml
2023/day19/: README.md
2023/day20/: .gitignore  README.md
2023/day21/: .gitignore
2023/day8/: Cargo.toml
2024/: README.md  aoc.sh
2024/aoc-template/: Cargo.toml
2024/day01/: bench.txt
2024/day02/: Cargo.toml  bench.txt
2024/day03/: Cargo.toml  bench.txt
2024/day04/: Cargo.toml  bench.txt
2024/day05/: Cargo.toml  bench.txt
2024/day06/: Cargo.toml  bench.txt
2024/day07/: Cargo.toml  README.md  bench.txt
2024/day08/: Cargo.toml  bench.txt
2024/day08/benches/: benchmarks.rs
2024/day08/src/: lib.rs  main.rs
2024/day09/: Cargo.toml  bench.txt  out.txt
2024/day10/: Cargo.toml  bench.txt
2024/day11/: Cargo.toml  bench.txt
2024/day12/: Cargo.toml  bench.txt  output.txt
2024/day12/benches/: benchmarks.rs
2024/day12/src/: lib.rs
2024/day13/: README.md  day13.py
2024/day14/: Cargo.toml  bench.txt
2024/day14/benches/: benchmarks.rs
2024/day14/src/: lib.rs  main.rs
2024/day15/: README.md
2024/day16/: Cargo.toml
2024/day17/: .cargo-generate.toml  Cargo.toml  README.md  bench.txt  part2.py
2024/day17/benches/: benchmarks.rs
2024/day17/src/: lib.rs  main.rs
2024/day18/: Cargo.toml  README.md  bench.txt
2024/day19/: Cargo.toml  bench.txt
2024/day20/: Cargo.toml  bench.txt
2024/day21/: Cargo.toml
2024/day22/: Cargo.toml
2024/day23/: Cargo.toml  bench.txt
2024/day24/: Cargo.toml
2025/: .gitignore  README.md  aoc.sh  devenv.nix  devenv.yaml
2025/aoc-template/: Cargo.toml
2025/day01/: Cargo.toml  bench.md
2025/day02/: Cargo.toml  bench.txt
2025/day03/: Cargo.toml  README.md
2025/day04/: Cargo.toml  README.md
2025/day05/: Cargo.toml  README.md
2025/day05/benches/: benchmarks.rs
2025/day05/src/: lib.rs  main.rs
2025/day06/: Cargo.toml  (+1 more)
2025/day09/: Cargo.toml  README.md
2025/day09/benches/: benchmarks.rs
2025/day09/src/: lib.rs
2025/day12/: Cargo.toml  README.md
2025/day12/src/: lib.rs  main.rs
(+93 files in other folders)
