[package]
name = "day08"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1.17"
glam = "0.29.2"
itertools = "0.13.0"


[[bench]]
name = "day08-bench"
path = "benches/benchmarks.rs"
harness = false
