[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1.17"
regex = "1.11.1"
z3 = "0.12.1"


[[bench]]
name = "day17-bench"
path = "benches/benchmarks.rs"
harness = false
