[package]
name = "day09"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divan = "0.1.21"
glam = "0.30.9"
memoize = "0.5.1"
ndarray = "0.17.1"
rayon = "1.11.0"


[[bench]]
name = "day09-bench"
path = "benches/benchmarks.rs"
harness = false
